--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-	<title>Inline styling </title>
+	<meta charset="utf-8">
+	<title>AirBnB clone </title>
 	<style>
 	body{margin:0;
 		padding: 0;
@@ -19,6 +20,7 @@
 	}
 	</style>
   </head>
+
   <body>
 	<header>
 	</header>
