--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-	  <title>Inline styling </title>
+	  <meta charset="utf-8">
+	  <title>AirBnB clone </title>
   </head>
+
   <body style="margin: 0; padding: 0;">
 	<header style="background-color: #FF0000; height: 60px; width: 100%;">
 	</header>
