--- a/web_static/2-index.html
+++ b/web_static/2-index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-	<title>CSS FILES </title>
+	<meta charset="utf-8">
+	<title>AirBnB clone </title>
 	<link rel="stylesheet" href="styles/2-common.css">	
     <link rel="stylesheet" href="styles/2-header.css">
     <link rel="stylesheet" href="styles/2-footer.css">	
   </head>
+
   <body>
 	<header>
 	</header>
 	<footer>
-	Best School
+	 Best School
 	</footer>
   </body>
 </html>
