--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-	<title>CSS FILES </title>
+	  <meta charset="utf-8">
+	<title>AirBnB clone</title>
 	<link rel="icon" type="image/icon" href="/images/icon.png">
 	<link rel="stylesheet" href="styles/3-common.css">	
     <link rel="stylesheet" href="styles/3-header.css">
     <link rel="stylesheet" href="styles/3-footer.css">	
   </head>
+
   <body>
-	<header>
-	</header>
+	<header></header>
 	<footer>
-	Best School
+		Best School
 	</footer>
-  </body>
+   </body>
 </html>
