--- a/web_static/2-index.html
+++ b/web_static/2-index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-	<title>CSS FILES </title>
+	<title>AirBnB Clone </title>
+	<meta charset="utf-8">
 	<link rel="stylesheet" href="styles/2-common.css">	
     <link rel="stylesheet" href="styles/2-header.css">
     <link rel="stylesheet" href="styles/2-footer.css">	
