--- a/web_static/7-index.html
+++ b/web_static/7-index.html
@@ -48,19 +48,13 @@
         <section class="places">
             <h1>Places</h1>
             <article>
-                <ul>
-                 <li><h2>My home</h2></li>
-                 </ul>
+                <h2>My home</h2>
             </article>
             <article>
-                <ul>
-                    <li><h2>Tiny house</h2></li>
-                </ul>
+                <h2>Tiny house</h2>
             </article>
             <article>
-                <ul>
-                    <li><h2>Suite</h2></li>
-                </ul>
+                 <h2>Suite</h2>
             </article>
         </section>
     </div>
